spade-tests/src/snapshots/spade_tests__ports_integration__memory_of_ports_is_disallowed.snap
---
source: spade-tests/src/ports_integration.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Generic types can not be ports
   ┌─ testinput:11:36
   │
11 │     let mem: Memory<&bool, 1024> = inst std::mem::clocked_memory(clk, [(true, idx, p)]);
   │                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Parameter std::mem::D is &bool which is a port type


